# MachO-Kit

./: .gitignore  CMakeLists.txt  README.md
include/public/MachOKit/: MKNodeFieldCPUSubTypeARM6432.h  MKNodeFieldTypeBoolean.h
libMachO/: CMakeLists.txt
libMachO/src/: data_model.c  load_command_build_version.c  load_command_code_signature.c  load_command_data_in_code.c  load_command_dsymtab.c  load_command_dyld_chained_fixups.c  load_command_dyld_environment.c  load_command_dyld_exports_trie.c  load_command_dyld_info.c  load_command_dyld_info_only.c  load_command_dylib_code_sign_drs.c  load_command_encryption_info.c  load_command_encryption_info_64.c  load_command_function_starts.c  load_command_id_dylib.c  load_command_id_dylinker.c  load_command_lazy_load_dylib.c  load_command_linker_option.c  load_command_load_dylib.c  load_command_load_dylinker.c  load_command_load_upward_dylib.c  load_command_load_weak_dylib.c  load_command_main.c  load_command_note.c  load_command_prebind_cksum.c  load_command_reexport_dylib.c  load_command_routines.c  load_command_routines_64.c  load_command_rpath.c  load_command_segment.c  load_command_segment_64.c  load_command_segment_split_info.c  load_command_source_version.c  load_command_sub_client.c  load_command_sub_framework.c  load_command_sub_library.c  load_command_symtab.c  load_command_twolevel_hints.c  load_command_uuid.c  load_command_version_min_iphoneos.c  (+3 more)
src/: MKBindAction.m  MKMemoryMap+Pointer.m  MKNodeFieldCPUSubTypeARM.m  MKObjCIVarOffset.m
