cmake_minimum_required( VERSION 3.10 )

project( MachOKit )

set( PUBLIC_HEADERS
        MKARMDataModel.h
        MKASTSymbol.h
        MKAbsoluteSymbol.h
        MKAbstractDataModel.h
        MKAddressedNode.h
        MKAliasSymbol.h
        MKBackedNode.h
        MKBase.h
        MKBeginNamedSectionSymbol.h
        MKBindAction.h
        MKBindActionBind.h
        MKBindActionThreadedBind.h
        MKBindActionThreadedRebase.h
        MKBindAddAddressULEB.h
        MKBindCommand.h
        MKBindCommandOffsetAdjusting.h
        MKBindContext.h
        MKBindDoBind.h
        MKBindDoBindAddAddressImmediateScaled.h
        MKBindDoBindAddAddressULEB.h
        MKBindDoBindULEBTimesSkippingULEB.h
        MKBindDone.h
        MKBindSetAddendSLEB.h
        MKBindSetDylibOrdinalImmediate.h
        MKBindSetDylibOrdinalULEB.h
        MKBindSetDylibSpecialImmediate.h
        MKBindSetSegmentAndOffsetULEB.h
        MKBindSetSymbolAndFlags.h
        MKBindSetTypeImmediate.h
        MKBindThreaded.h
        MKBindThreadedApply.h
        MKBindThreadedSetBindOrdinalTableSizeULEB.h
        MKBindingsFieldType.h
        MKBindingsInfo.h
        MKBitfieldFormatter.h
        MKBooleanFormatter.h
        MKCFString.h
        MKCFStringSection.h
        MKCString.h
        MKCStringSection.h
        MKComboFormatter.h
        MKCommonSymbol.h
        MKDSCDylibInfos.h
        MKDSCDylibSymbolInfo.h
        MKDSCHeader.h
        MKDSCImage.h
        MKDSCImagesInfo.h
        MKDSCLocalSymbols.h
        MKDSCLocalSymbolsHeader.h
        MKDSCMapping.h
        MKDSCMappingInfo.h
        MKDSCSlidPointer.h
        MKDSCSlideInfo.h
        MKDSCSlideInfoBitmap.h
        MKDSCSlideInfoHeader.h
        MKDSCSlideInfoPage.h
        MKDSCStringTable.h
        MKDSCSymbol.h
        MKDSCSymbolTable.h
        MKDarwinDataModels.h
        MKDataInCode.h
        MKDataInCodeEntry.h
        MKDataInCodeFieldType.h
        MKDataModel+ObjC.h
        MKDataModel.h
        MKDataSection.h
        MKDebugSymbol.h
        MKDefinedSymbol.h
        MKDependentLibrary.h
        MKDylibLoadCommand.h
        MKDylibVersion.h
        MKDylinkerLoadCommand.h
        MKEndNamedSectionSymbol.h
        MKEnumerationFormatter.h
        MKExport.h
        MKExportTrieBranch.h
        MKExportTrieNode.h
        MKExportTrieTerminalNode.h
        MKExportsFieldType.h
        MKExportsInfo.h
        MKFatArch.h
        MKFatBinary.h
        MKFieldType.h
        MKFixup.h
        MKFormatterChain.h
        MKFunction.h
        MKFunctionOffset.h
        MKFunctionStarts.h
        MKFunctionStartsContext.h
        MKGlobalSymbol.h
        MKHexNumberFormatter.h
        MKILP32DataModel.h
        MKIncludedFileNameSymbol.h
        MKIndirectPointersSection.h
        MKIndirectSymbol.h
        MKIndirectSymbolTable.h
        MKLCBuildVersion.h
        MKLCCodeSignature.h
        MKLCDataInCode.h
        MKLCDyldChainedFixups.h
        MKLCDyldEnvironment.h
        MKLCDyldExportsTrie.h
        MKLCDyldInfo.h
        MKLCDyldInfoOnly.h
        MKLCDylibCodeSignDrs.h
        MKLCDysymtab.h
        MKLCEncryptionInfo.h
        MKLCEncryptionInfo64.h
        MKLCFunctionStarts.h
        MKLCIDDylib.h
        MKLCIDDylinker.h
        MKLCLazyLoadDylib.h
        MKLCLinkerOption.h
        MKLCLoadDylib.h
        MKLCLoadDylinker.h
        MKLCLoadUpwardDylib.h
        MKLCLoadWeakDylib.h
        MKLCMain.h
        MKLCNote.h
        MKLCPrebindChecksum.h
        MKLCRPath.h
        MKLCReExportDylib.h
        MKLCRoutines.h
        MKLCRoutines64.h
        MKLCSegment.h
        MKLCSegment64.h
        MKLCSegmentSplitInfo.h
        MKLCSourceVersion.h
        MKLCSubClient.h
        MKLCSubFramework.h
        MKLCSubLibrary.h
        MKLCSymtab.h
        MKLCTwoLevelHints.h
        MKLCUUID.h
        MKLCVersionMinMacOSX.h
        MKLCVersionMinTVOS.h
        MKLCVersionMinWatchOS.h
        MKLCVersionMiniPhoneOS.h
        MKLP64DataModel.h
        MKLazyBindingsInfo.h
        MKLinkEditDataLoadCommand.h
        MKLinkEditNode.h
        MKLoadCommand.h
        MKMachHeader.h
        MKMachHeader64.h
        MKMachO+Bindings.h
        MKMachO+Exports.h
        MKMachO+Functions.h
        MKMachO+Libraries.h
        MKMachO+Rebase.h
        MKMachO+Segments.h
        MKMachO+SplitSegment.h
        MKMachO+Symbols.h
        MKMachO.h
        MKMachOFieldType.h
        MKMachOImage+DataInCode.h
        MKMemoryMap+Pointer.h
        MKMemoryMap.h
        MKMinVersionLoadCommand.h
        MKNode+MachO.h
        MKNode+SharedCache.h
        MKNode.h
        MKNodeDescription.h
        MKNodeField.h
        MKNodeFieldBindOpcodeType.h
        MKNodeFieldBindSymbolFlagsType.h
        MKNodeFieldBindThreadedSubOpcodeType.h
        MKNodeFieldBindType.h
        MKNodeFieldBitfieldType.h
        MKNodeFieldBooleanType.h
        MKNodeFieldBuilder.h
        MKNodeFieldCPUSubType.h
        MKNodeFieldCPUSubTypeARM.h
        MKNodeFieldCPUSubTypeARM64.h
        MKNodeFieldCPUSubTypeARM6432.h
        MKNodeFieldCPUSubTypeAny.h
        MKNodeFieldCPUSubTypeFeatures.h
        MKNodeFieldCPUSubTypeI386.h
        MKNodeFieldCPUSubTypePowerPC.h
        MKNodeFieldCPUSubTypePowerPC64.h
        MKNodeFieldCPUSubTypeX86.h
        MKNodeFieldCPUType.h
        MKNodeFieldCollectionType.h
        MKNodeFieldContainerType.h
        MKNodeFieldDataInCodeEntryType.h
        MKNodeFieldDataOperationExtractChildNodeData.h
        MKNodeFieldDataOperationExtractDynamicSubrange.h
        MKNodeFieldDataOperationExtractSubrange.h
        MKNodeFieldDataRecipe.h
        MKNodeFieldDateType.h
        MKNodeFieldDeprecated.h
        MKNodeFieldEnumerationType.h
        MKNodeFieldExportFlagsType.h
        MKNodeFieldExportKindType.h
        MKNodeFieldExportOptionsType.h
        MKNodeFieldExtractSortedDictionaryValues.h
        MKNodeFieldMachOFileType.h
        MKNodeFieldMachOFlagsType.h
        MKNodeFieldNodeType.h
        MKNodeFieldNumericType.h
        MKNodeFieldObjCClassFlagsType.h
        MKNodeFieldObjCImageInfoFlagsType.h
        MKNodeFieldObjCImageInfoImageFlagsType.h
        MKNodeFieldObjCImageInfoSwiftVersionType.h
        MKNodeFieldOperationReadKeyPath.h
        MKNodeFieldOperationReturnConstant.h
        MKNodeFieldOptionSetType.h
        MKNodeFieldPointerType.h
        MKNodeFieldRebaseOpcodeType.h
        MKNodeFieldRebaseType.h
        MKNodeFieldRecipe.h
        MKNodeFieldSTABType.h
        MKNodeFieldSectionFlagsType.h
        MKNodeFieldSectionSystemAttributesType.h
        MKNodeFieldSectionType.h
        MKNodeFieldSectionUserAttributesType.h
        MKNodeFieldSegmentFlagsType.h
        MKNodeFieldSplitSegmentInfoV1FixupType.h
        MKNodeFieldSplitSegmentInfoV1OpcodeType.h
        MKNodeFieldStringType.h
        MKNodeFieldSymbolFlagsType.h
        MKNodeFieldSymbolLibraryOrdinalType.h
        MKNodeFieldSymbolReferenceType.h
        MKNodeFieldSymbolType.h
        MKNodeFieldType.h
        MKNodeFieldTypeAddress.h
        MKNodeFieldTypeBitfield.h
        MKNodeFieldTypeBoolean.h
        MKNodeFieldTypeByte.h
        MKNodeFieldTypeCollection.h
        MKNodeFieldTypeDate.h
        MKNodeFieldTypeDoubleWord.h
        MKNodeFieldTypeEnumeration.h
        MKNodeFieldTypeNode.h
        MKNodeFieldTypeOffset.h
        MKNodeFieldTypeOptionSet.h
        MKNodeFieldTypePointer.h
        MKNodeFieldTypeQuadWord.h
        MKNodeFieldTypeSize.h
        MKNodeFieldTypeString.h
        MKNodeFieldTypeWord.h
        MKNodeFieldVMProtectionType.h
        MKNodeFieldValueRecipe.h
        MKNodeFieldVersionType.h
        MKObjCCategory.h
        MKObjCCategoryListSection.h
        MKObjCClass.h
        MKObjCClassData.h
        MKObjCClassFieldType.h
        MKObjCClassIVar.h
        MKObjCClassIVarList.h
        MKObjCClassListSection.h
        MKObjCClassMethod.h
        MKObjCClassMethodList.h
        MKObjCClassProperty.h
        MKObjCClassPropertyList.h
        MKObjCClassReferencesSection.h
        MKObjCConstSection.h
        MKObjCDataSection.h
        MKObjCElementList.h
        MKObjCIVarOffset.h
        MKObjCIVarSection.h
        MKObjCImageInfo.h
        MKObjCImageInfoFieldType.h
        MKObjCImageInfoSection.h
        MKObjCProtocol.h
        MKObjCProtocolList.h
        MKObjCProtocolListSection.h
        MKObjCProtocolMethodTypesList.h
        MKObjCProtocolReferencesSection.h
        MKObjCSelectorReferencesSection.h
        MKObjCSuperReferencesSection.h
        MKObjectFileNameSymbol.h
        MKObjectFormatter.h
        MKOffsetNode+AddressBasedInitialization.h
        MKOffsetNode.h
        MKOptionSetFormatter.h
        MKPointer+Node.h
        MKPointer.h
        MKPointerListSection.h
        MKPointerNode.h
        MKProcedureSymbol.h
        MKReExport.h
        MKRebaseAddAddressImmediateScaled.h
        MKRebaseAddAddressULEB.h
        MKRebaseCommand.h
        MKRebaseCommandOffsetAdjusting.h
        MKRebaseContext.h
        MKRebaseDoRebaseAddAddressULEB.h
        MKRebaseDoRebaseImmediateTimes.h
        MKRebaseDoRebaseULEBTimes.h
        MKRebaseDoRebaseULEBTimesSkippingULEB.h
        MKRebaseDone.h
        MKRebaseFieldType.h
        MKRebaseInfo.h
        MKRebaseSetSegmentAndOffsetULEB.h
        MKRebaseSetTypeImmediate.h
        MKRegularExport.h
        MKRegularSymbol.h
        MKResolvedExport.h
        MKResult.h
        MKSection.h
        MKSectionIndirectSymbolTableIndexing.h
        MKSectionSymbol.h
        MKSegment.h
        MKSharedCache+Images.h
        MKSharedCache+Slide.h
        MKSharedCache+Symbols.h
        MKSharedCache.h
        MKSharedFieldType.h
        MKSourceFileNameSymbol.h
        MKSourceVersion.h
        MKSplitSegmentInfo.h
        MKSplitSegmentInfoV1.h
        MKSplitSegmentInfoV1Context.h
        MKSplitSegmentInfoV1Entry.h
        MKSplitSegmentInfoV1FieldType.h
        MKSplitSegmentInfoV1Fixup.h
        MKSplitSegmentInfoV1Offset.h
        MKSplitSegmentInfoV1Opcode.h
        MKSplitSegmentInfoV1Terminator.h
        MKStaticSymbol.h
        MKString.h
        MKStringFormatter.h
        MKStringTable.h
        MKStubsSection.h
        MKSymbol.h
        MKSymbolTable.h
        MKSymbolsFieldType.h
        MKUString.h
        MKUStringSection.h
        MKUndefinedSymbol.h
        MKVersion.h
        MKWeakBindingsInfo.h
        MKX86DataModel.h
        MachOKit.h
        NSError+MK.h
        NSFormatter+MKNodeField.h
        NSNumber+MK.h )

set( PRIVATE_HEADERS
        _MKFileMemoryMap.h
        _MKTaskMemoryMap.h )

set( SOURCE_FILES
        MKARMDataModel.m
        MKASTSymbol.m
        MKAbsoluteSymbol.m
        MKAbstractDataModel.m
        MKAddressedNode.m
        MKAliasSymbol.m
        MKBackedNode.m
        MKBeginNamedSectionSymbol.m
        MKBindAction.m
        MKBindActionBind.m
        MKBindActionThreadedBind.m
        MKBindActionThreadedRebase.m
        MKBindAddAddressULEB.m
        MKBindCommand.m
        MKBindDoBind.m
        MKBindDoBindAddAddressImmediateScaled.m
        MKBindDoBindAddAddressULEB.m
        MKBindDoBindULEBTimesSkippingULEB.m
        MKBindDone.m
        MKBindSetAddendSLEB.m
        MKBindSetDylibOrdinalImmediate.m
        MKBindSetDylibOrdinalULEB.m
        MKBindSetDylibSpecialImmediate.m
        MKBindSetSegmentAndOffsetULEB.m
        MKBindSetSymbolAndFlags.m
        MKBindSetTypeImmediate.m
        MKBindThreaded.m
        MKBindThreadedApply.m
        MKBindThreadedSetBindOrdinalTableSizeULEB.m
        MKBindingsInfo.m
        MKBitfieldFormatter.m
        MKBooleanFormatter.m
        MKCFString.m
        MKCFStringSection.m
        MKCString.m
        MKCStringSection.m
        MKComboFormatter.m
        MKCommonSymbol.m
        MKDSCDylibInfos.m
        MKDSCDylibSymbolInfo.m
        MKDSCHeader.m
        MKDSCImage.m
        MKDSCImagesInfo.m
        MKDSCLocalSymbols.m
        MKDSCLocalSymbolsHeader.m
        MKDSCMapping.m
        MKDSCMappingInfo.m
        MKDSCSlidPointer.m
        MKDSCSlideInfo.m
        MKDSCSlideInfoBitmap.m
        MKDSCSlideInfoHeader.m
        MKDSCSlideInfoPage.m
        MKDSCStringTable.m
        MKDSCSymbol.m
        MKDSCSymbolTable.m
        MKDarwinDataModels.m
        MKDataInCode.m
        MKDataInCodeEntry.m
        MKDataModel+ObjC.m
        MKDataSection.m
        MKDebugSymbol.m
        MKDefinedSymbol.m
        MKDependentLibrary.m
        MKDylibLoadCommand.m
        MKDylibVersion.m
        MKDylinkerLoadCommand.m
        MKEndNamedSectionSymbol.m
        MKEnumerationFormatter.m
        MKExport.m
        MKExportTrieBranch.m
        MKExportTrieNode.m
        MKExportTrieTerminalNode.m
        MKExportsInfo.m
        MKFatArch.m
        MKFatBinary.m
        MKFixup.m
        MKFormatterChain.m
        MKFunction.m
        MKFunctionOffset.m
        MKFunctionStarts.m
        MKGlobalSymbol.m
        MKHexNumberFormatter.m
        MKILP32DataModel.m
        MKIncludedFileNameSymbol.m
        MKIndirectPointersSection.m
        MKIndirectSymbol.m
        MKIndirectSymbolTable.m
        MKLCBuildVersion.m
        MKLCCodeSignature.m
        MKLCDataInCode.m
        MKLCDyldChainedFixups.m
        MKLCDyldEnvironment.m
        MKLCDyldExportsTrie.m
        MKLCDyldInfo.m
        MKLCDyldInfoOnly.m
        MKLCDylibCodeSignDrs.m
        MKLCDysymtab.m
        MKLCEncryptionInfo.m
        MKLCEncryptionInfo64.m
        MKLCFunctionStarts.m
        MKLCIDDylib.m
        MKLCIDDylinker.m
        MKLCLazyLoadDylib.m
        MKLCLinkerOption.m
        MKLCLoadDylib.m
        MKLCLoadDylinker.m
        MKLCLoadUpwardDylib.m
        MKLCLoadWeakDylib.m
        MKLCMain.m
        MKLCNote.m
        MKLCPrebindChecksum.m
        MKLCRPath.m
        MKLCReExportDylib.m
        MKLCRoutines.m
        MKLCRoutines64.m
        MKLCSegment.m
        MKLCSegment64.m
        MKLCSegmentSplitInfo.m
        MKLCSourceVersion.m
        MKLCSubClient.m
        MKLCSubFramework.m
        MKLCSubLibrary.m
        MKLCSymtab.m
        MKLCTwoLevelHints.m
        MKLCUUID.m
        MKLCVersionMinMacOSX.m
        MKLCVersionMinTVOS.m
        MKLCVersionMinWatchOS.m
        MKLCVersionMiniPhoneOS.m
        MKLEB.m
        MKLP64DataModel.m
        MKLazyBindingsInfo.m
        MKLinkEditDataLoadCommand.m
        MKLinkEditNode.m
        MKLoadCommand.m
        MKMachHeader.m
        MKMachHeader64.m
        MKMachO+Bindings.m
        MKMachO+Exports.m
        MKMachO+Functions.m
        MKMachO+Libraries.m
        MKMachO+Rebase.m
        MKMachO+Segments.m
        MKMachO+SplitSegment.m
        MKMachO+Symbols.m
        MKMachO.m
        MKMachOImage+DataInCode.m
        MKMemoryMap+Pointer.m
        MKMemoryMap.m
        MKMinVersionLoadCommand.m
        MKNode+MachO.m
        MKNode+SharedCache.m
        MKNode.m
        MKNodeDescription.m
        MKNodeField.m
        MKNodeFieldBindOpcodeType.m
        MKNodeFieldBindSymbolFlagsType.m
        MKNodeFieldBindThreadedSubOpcodeType.m
        MKNodeFieldBindType.m
        MKNodeFieldBuilder.m
        MKNodeFieldCPUSubType.m
        MKNodeFieldCPUSubTypeARM.m
        MKNodeFieldCPUSubTypeARM64.m
        MKNodeFieldCPUSubTypeARM6432.m
        MKNodeFieldCPUSubTypeAny.m
        MKNodeFieldCPUSubTypeFeatures.m
        MKNodeFieldCPUSubTypeI386.m
        MKNodeFieldCPUSubTypePowerPC.m
        MKNodeFieldCPUSubTypePowerPC64.m
        MKNodeFieldCPUSubTypeX86.m
        MKNodeFieldCPUType.m
        MKNodeFieldDataInCodeEntryType.m
        MKNodeFieldDataOperationExtractChildNodeData.m
        MKNodeFieldDataOperationExtractDynamicSubrange.m
        MKNodeFieldDataOperationExtractSubrange.m
        MKNodeFieldDeprecated.m
        MKNodeFieldExportFlagsType.m
        MKNodeFieldExportKindType.m
        MKNodeFieldExportOptionsType.m
        MKNodeFieldExtractSortedDictionaryValues.m
        MKNodeFieldMachOFileType.m
        MKNodeFieldMachOFlagsType.m
        MKNodeFieldObjCClassFlagsType.m
        MKNodeFieldObjCImageInfoFlagsType.m
        MKNodeFieldObjCImageInfoImageFlagsType.m
        MKNodeFieldObjCImageInfoSwiftVersionType.m
        MKNodeFieldOperationReadKeyPath.m
        MKNodeFieldOperationReturnConstant.m
        MKNodeFieldRebaseOpcodeType.m
        MKNodeFieldRebaseType.m
        MKNodeFieldSTABType.m
        MKNodeFieldSectionFlagsType.m
        MKNodeFieldSectionSystemAttributesType.m
        MKNodeFieldSectionType.m
        MKNodeFieldSectionUserAttributesType.m
        MKNodeFieldSegmentFlagsType.m
        MKNodeFieldSplitSegmentInfoV1FixupType.m
        MKNodeFieldSplitSegmentInfoV1OpcodeType.m
        MKNodeFieldSymbolFlagsType.m
        MKNodeFieldSymbolLibraryOrdinalType.m
        MKNodeFieldSymbolReferenceType.m
        MKNodeFieldSymbolType.m
        MKNodeFieldTypeAddress.m
        MKNodeFieldTypeBitfield.m
        MKNodeFieldTypeBoolean.m
        MKNodeFieldTypeByte.m
        MKNodeFieldTypeCollection.m
        MKNodeFieldTypeDate.m
        MKNodeFieldTypeDoubleWord.m
        MKNodeFieldTypeEnumeration.m
        MKNodeFieldTypeNode.m
        MKNodeFieldTypeOffset.m
        MKNodeFieldTypeOptionSet.m
        MKNodeFieldTypePointer.m
        MKNodeFieldTypeQuadWord.m
        MKNodeFieldTypeSize.m
        MKNodeFieldTypeString.m
        MKNodeFieldTypeWord.m
        MKNodeFieldVMProtectionType.m
        MKNodeFieldVersionType.m
        MKObjCCategory.m
        MKObjCCategoryListSection.m
        MKObjCClass.m
        MKObjCClassData.m
        MKObjCClassIVar.m
        MKObjCClassIVarList.m
        MKObjCClassListSection.m
        MKObjCClassMethod.m
        MKObjCClassMethodList.m
        MKObjCClassProperty.m
        MKObjCClassPropertyList.m
        MKObjCClassReferencesSection.m
        MKObjCConstSection.m
        MKObjCDataSection.m
        MKObjCElementList.m
        MKObjCIVarOffset.m
        MKObjCIVarSection.m
        MKObjCImageInfo.m
        MKObjCImageInfoSection.m
        MKObjCProtocol.m
        MKObjCProtocolList.m
        MKObjCProtocolListSection.m
        MKObjCProtocolMethodTypesList.m
        MKObjCProtocolReferencesSection.m
        MKObjCSelectorReferencesSection.m
        MKObjCSuperReferencesSection.m
        MKObjectFileNameSymbol.m
        MKObjectFormatter.m
        MKOffsetNode+AddressBasedInitialization.m
        MKOffsetNode.m
        MKOptionSetFormatter.m
        MKPointer+Node.m
        MKPointer.m
        MKPointerListSection.m
        MKPointerNode.m
        MKProcedureSymbol.m
        MKPtr.m
        MKReExport.m
        MKRebaseAddAddressImmediateScaled.m
        MKRebaseAddAddressULEB.m
        MKRebaseCommand.m
        MKRebaseDoRebaseAddAddressULEB.m
        MKRebaseDoRebaseImmediateTimes.m
        MKRebaseDoRebaseULEBTimes.m
        MKRebaseDoRebaseULEBTimesSkippingULEB.m
        MKRebaseDone.m
        MKRebaseInfo.m
        MKRebaseSetSegmentAndOffsetULEB.m
        MKRebaseSetTypeImmediate.m
        MKRegularExport.m
        MKRegularSymbol.m
        MKResolvedExport.m
        MKResult.m
        MKSection.m
        MKSectionSymbol.m
        MKSegment.m
        MKSharedCache+Images.m
        MKSharedCache+Slide.m
        MKSharedCache+Symbols.m
        MKSharedCache.m
        MKSourceFileNameSymbol.m
        MKSourceVersion.m
        MKSplitSegmentInfo.m
        MKSplitSegmentInfoV1.m
        MKSplitSegmentInfoV1Entry.m
        MKSplitSegmentInfoV1Fixup.m
        MKSplitSegmentInfoV1Offset.m
        MKSplitSegmentInfoV1Opcode.m
        MKSplitSegmentInfoV1Terminator.m
        MKStaticSymbol.m
        MKStringFormatter.m
        MKStringTable.m
        MKStubsSection.m
        MKSymbol.m
        MKSymbolTable.m
        MKUString.m
        MKUStringSection.m
        MKUndefinedSymbol.m
        MKVersion.m
        MKWeakBindingsInfo.m
        MKX86DataModel.m
        MachOKit.m
        NSError+MK.m
        NSFormatter+MKNodeField.m
        NSNumber+MK.m
        _MKFileMemoryMap.m
        _MKTaskMemoryMap.m )

set( FQ_PUBLIC_HEADERS )
foreach( PUBLIC_HEADER ${PUBLIC_HEADERS} )
    list( APPEND FQ_PUBLIC_HEADERS ${CMAKE_CURRENT_LIST_DIR}/include/public/MachOKit/${PUBLIC_HEADER} )
endforeach()

set( FQ_PRIVATE_HEADERS )
foreach( PRIVATE_HEADER ${PRIVATE_HEADERS} )
    list( APPEND FQ_PRIVATE_HEADERS ${CMAKE_CURRENT_LIST_DIR}/include/private/${PRIVATE_HEADER} )
endforeach()

set( FQ_SOURCE_FILES )
foreach( SOURCE_FILE ${SOURCE_FILES} )
    list( APPEND FQ_SOURCE_FILES ${CMAKE_CURRENT_LIST_DIR}/src/${SOURCE_FILE} )
endforeach()

add_subdirectory( libMachO )

set( FQ_LIBMACHO_PUBLIC_HEADERS )
foreach( LIBMACHO_PUBLIC_HEADER ${LIBMACHO_PUBLIC_HEADERS} )
    list( APPEND FQ_LIBMACHO_PUBLIC_HEADERS ${CMAKE_CURRENT_LIST_DIR}/libMachO/include/public/${LIBMACHO_PUBLIC_HEADER} )
endforeach()

set( MACHOKIT_PUBLIC_INCLUDES_DIR include/public/MachOKit )
set( FQ_MACHOKIT_LIBMACHO_PUBLIC_HEADERS )
foreach( LIBMACHO_PUBLIC_HEADER ${LIBMACHO_PUBLIC_HEADERS} )
    list( APPEND FQ_MACHOKIT_LIBMACHO_PUBLIC_HEADERS ${MACHOKIT_PUBLIC_INCLUDES_DIR}/${LIBMACHO_PUBLIC_HEADER} )
endforeach()

set( FQ_LIBMACHO_PRIVATE_HEADERS )
foreach( LIBMACHO_PRIVATE_HEADER ${LIBMACHO_PRIVATE_HEADERS} )
    list( APPEND FQ_LIBMACHO_PRIVATE_HEADERS ${CMAKE_CURRENT_LIST_DIR}/libMachO/include/private/${LIBMACHO_PRIVATE_HEADER} )
endforeach()

set( MACHOKIT_PRIVATE_INCLUDES_DIR include/private )
set( FQ_MACHOKIT_LIBMACHO_PRIVATE_INCLUDES )
foreach( LIBMACHO_PRIVATE_HEADER ${LIBMACHO_PRIVATE_HEADERS} )
    list( APPEND FQ_MACHOKIT_LIBMACHO_PRIVATE_INCLUDES ${MACHOKIT_PRIVATE_INCLUDES_DIR}/${LIBMACHO_PRIVATE_HEADER} )
endforeach()

add_custom_command( OUTPUT ${FQ_MACHOKIT_LIBMACHO_PUBLIC_HEADERS} ${FQ_MACHOKIT_LIBMACHO_PRIVATE_INCLUDES}
        COMMAND ${CMAKE_COMMAND} -E copy ${FQ_LIBMACHO_PUBLIC_HEADERS} ${MACHOKIT_PUBLIC_INCLUDES_DIR}
        COMMAND ${CMAKE_COMMAND} -E copy ${FQ_LIBMACHO_PRIVATE_HEADERS} ${MACHOKIT_PRIVATE_INCLUDES_DIR} )

add_library( machokit SHARED
        ${FQ_PUBLIC_HEADERS}
        ${FQ_PRIVATE_HEADERS}
        ${FQ_SOURCE_FILES}
        ${FQ_MACHOKIT_LIBMACHO_PUBLIC_HEADERS} )
target_link_libraries( machokit PUBLIC libmacho $<LINK_LIBRARY:FRAMEWORK,Foundation> )
set_target_properties( machokit PROPERTIES
        FRAMEWORK true
        PUBLIC_HEADER "${FQ_PUBLIC_HEADERS};${FQ_MACHOKIT_LIBMACHO_PUBLIC_HEADERS}"
        PRIVATE_HEADER "${FQ_PRIVATE_HEADERS}"
        OUTPUT_NAME MachOKit )

target_include_directories( machokit
        PUBLIC
            include/public
            include/public/MachOKit
            ${CMAKE_BINARY_DIR}/include/public
        PRIVATE
            include/private
            ${CMAKE_BINARY_DIR}/include/private )

install( TARGETS machokit
        COMPONENT machokit
        FRAMEWORK DESTINATION . )
